--- a/public/index.html
+++ b/public/index.html
@@ -2,36 +2,59 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>蛋糕店管理系统</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <script type="module" src="scripts/app.js"></script>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     <!-- 登录界面 -->
     <div id="login-view" class="container">
         <h1>蛋糕店管理系统</h1>
         <div class="form-group">
-            <input type="email" id="email" placeholder="电子邮箱">
+            <input type="email" id="email" placeholder="電子郵件" required>
         </div>
         <div class="form-group">
-            <input type="password" id="password" placeholder="密码">
+            <input type="password" id="password" placeholder="密碼" required>
         </div>
-        <button id="login-btn" class="btn-primary">登录</button>
+        <button id="login-btn" class="btn">登入</button>
     </div>
 
     <!-- 生产界面 -->
     <div id="production-view" class="container hidden">
-        <h2>今日生产清单</h2>
+        <div class="header">
+            <h2>今日生產清單</h2>
+            <button id="refresh-btn" class="btn">刷新清單</button>
+        </div>
         <div id="production-list"></div>
     </div>
 
     <!-- 柜台界面 -->
     <div id="counter-view" class="container hidden">
         <div class="header">
-            <button id="create-order-btn" class="btn-success">新增订单</button>
-            <input type="text" id="search-order" placeholder="搜索订单编号...">
+            <h2>訂單管理</h2>
+            <button id="new-order-btn" class="btn btn-primary">新增訂單</button>
+        </div>
+        <div class="search-box">
+            <input type="text" id="search-input" placeholder="搜尋訂單...">
         </div>
         <div id="order-list"></div>
+        
+        <!-- 订单模态框 -->
+        <div id="order-modal" class="modal hidden">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h3>訂單詳情</h3>
+                <form id="order-form">
+                    <!-- 订单表单字段 -->
+                </form>
+            </div>
+        </div>
     </div>
+
+    <script type="module" src="/scripts/firebase.js"></script>
+    <script type="module" src="/scripts/auth.js"></script>
+    <script type="module" src="/scripts/orders.js"></script>
+    <script type="module" src="/scripts/production.js"></script>
+    <script type="module" src="/scripts/ui.js"></script>
 </body>
 </html>
